syntax = "proto3";
 
package com.nmatute.grpcclientsample.generated;
 
option java_multiple_files = true; 
option java_package = "com.nmatute.grpcclientsample.generated";
 
service ChatService {
    
    rpc enviarMensaje (EnviarMensaje) returns (RecibirMensaje) {}
    
    rpc enviarMultiplesMensajes (stream EnviarMensaje) returns (RecibirMensaje) {}
    
    rpc recibirMultiplesRespuestas (EnviarMensaje) returns (stream RecibirMensaje) {}
    
    rpc enviarRecibirMultiplesMensajes (stream EnviarMensaje) returns (stream RecibirMensaje) {}
}
 

message EnviarMensaje {
    uint32 to = 1; 
    string message = 2;
}
 

message RecibirMensaje {
    uint32 from = 1;
    string message = 2;
}